# koishi-ai-pet

./: .env.example  .gitattributes  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.superpowers/sdd/: task-5-report.md
assets/actions/bounce/: bounce.json
assets/actions/calling/: calling.json
assets/actions/falling/: falling.json
assets/actions/finger_heart/: finger_heart.json
assets/actions/fishing/: fishing.json
pet/: __init__.py  app.py  auto_start.py  config.py  settings.py
pet/action/: __init__.py  action.py  action_queue.py  gravity.py  registry.py
pet/agent/: __init__.py  memory_store.py  pet_agent.py  scheduled_tasks.py  scheduler.py  screen_reader.py  state.py  window_detector.py
pet/brain/: __init__.py  action_brain.py  base.py  behavior.py  chat_brain.py  context_builder.py  conversation_store.py  embedding_client.py  linux_detector.py  llm_client.py  llm_retry.py  llm_stats.py  mac_detector.py  memory.py  prompts.py  view.py  view_brain.py  win_detector.py  window_detector.py
pet/pulse/: mood.py  vitals.py
pet/skills/: __init__.py  context.py  executor.py  registry.py
pet/tools/: __init__.py  context.py  executor.py  registry.py
pet/tools/timer/: core.py  (+1 more)
pet/ui/: __init__.py  bubble.py  chat_bubble.py  chat_history.py  debug_window.py  emotion.py  feed_bubble.py  log_window.py  particle.py  pet_animations.py  pet_animations_player.py  pet_window.py  settings_window.py  speech_bubble.py  styles.py  system_tray.py
pet/voice/: __init__.py  hotkey_manager.py  mic_capture.py  voice_session.py  xunfei_stt.py
(+64 files in other folders)
